--- a/style.css
+++ b/style.css
@@ -902,7 +902,7 @@ main.main > article.content section.responses {
 }
 
 section.responses > .response {
-  /* border: 1px solid #6b7280; */
+  border-top: 1px solid #6b728038;
   padding: 15px 0;
   display: flex;
   flex-flow: column;
@@ -923,7 +923,7 @@ section.responses > .response > .head {
 section.responses > .response > .head > span.info {
   /* border: 1px solid #6b7280; */
   color: inherit;
-  /* line-height: 1.5; */
+  line-height: 1.5;
   width: max-content;
   display: flex;
   gap: 10px;
@@ -933,7 +933,7 @@ section.responses > .response > .head > span.info {
 
 section.responses > .response > .head > span.info > a {
   /* border: 1px solid #6b7280; */
-  /* line-height: inherit; */
+  line-height: inherit;
   padding: 0;
   display: flex;
   flex-flow: column;
@@ -941,10 +941,6 @@ section.responses > .response > .head > span.info > a {
   color: inherit;
   font-weight: 500;
   cursor: pointer;
-}
-
-section.responses > .response > .head > span.info > a:hover {
-  /* color: #08b86f; */
   color: transparent;
   background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
   background-clip: text;
@@ -953,7 +949,7 @@ section.responses > .response > .head > span.info > a:hover {
 
 section.responses > .response > .head > span.info > span.dot {
   display: inline-block;
-  margin: 2px 0 0 0;
+  margin: 1px 0 0 0;
   width: 5px;
   height: 5px;
   background-color: #6b7280c9;
@@ -964,31 +960,13 @@ section.responses > .response > .head > span.info > span.dot {
   -o-border-radius: 50px;
 }
 
-section.responses > .response > .head > span.info > span.profile {
-  /* border: 1px solid #6b7280; */
+section.responses > .response > .head span.info > span.date {
+  display: flex;
   line-height: inherit;
-  color: #6b7280;
-  padding: 0;
-  display: flex;
-  flex-flow: row-reverse;
-  align-items: center;
-  gap: 0;
-  color: inherit;
-  /* font-weight: 500; */
-  cursor: pointer;
-}
-
-section.responses > .response > .head > span.info > span.profile svg {
-  margin: 0 0 -3px 0;
-  width: 18px;
-  height: 18px;
-}
-
-section.responses > .response > .head > span.date {
-  display: flex;
   align-items: center;
   justify-content: space-between;
   color: #6b7280;
+  font-weight: 500;
   font-family: var(--font-mono);
   font-size: 0.9rem;
 }
