--- a/style.css
+++ b/style.css
@@ -902,6 +902,119 @@ main.main > article.content section.responses {
   gap: 0;
 }
 
+section.responses > .head {
+  border: 1px solid #6b72805e;
+  border-left: none;
+  border-right: none;
+  padding: 10px 0;
+  display: flex;
+  flex-flow: column;
+  gap: 0;
+}
+
+section.responses > .head > form.opinion {
+  border-bottom: 1px solid #6b72805d;
+  /* border: 1px solid #000000; */
+  padding: 10px 0 10px 0;
+  margin: 0 0;
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #6b7280;
+  position: relative;
+}
+
+section.responses > .head > form.opinion .image {
+  /* border: thin solid #4b5563bd; */
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* align-self: center; */
+  overflow: hidden;
+  width: 35px;
+  height: 35px;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+section.responses > .head > form.opinion .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+section.responses > .head > form.opinion > textarea {
+  /* border: 1px solid #6b72805e; */
+  border: none;
+  padding: 8px !important;
+  margin: 0;
+  width: calc(100% - 48px);
+  resize: none;
+  height: 48px;
+  /* max-height: 100px !important; */
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #6b7280;
+  border-radius: 10px;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+section.responses > .head > form.opinion > textarea::-webkit-scrollbar {
+  display: none !important;
+  visibility: hidden;
+}
+
+section.responses > .head > form.opinion > textarea:focus {
+  border: 1px solid #18a5669a;
+}
+
+section.responses > .head > form.opinion > button {
+  border: none;
+  cursor: pointer;
+  color: #ffffff;
+  background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
+  position: absolute;
+  right: 8px;
+  top: calc(50% - 15px);
+  height: 30px;
+  width: 60px;
+  padding: 0;
+  font-size: 0.9rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+section.responses > .head > form.opinion  > button svg {
+  color: #18A565;
+  width: 24px;
+  height: 26px;
+}
+
 section.responses > .response {
   border-top: 1px solid #6b728038;
   padding: 15px 0;
@@ -1167,7 +1280,7 @@ section.responses > .response > form.reply > textarea {
   scrollbar-width: none;
 }
 
-.quick-info>.images>.image-options .images::-webkit-scrollbar {
+section.responses > .response > form.reply > textarea::-webkit-scrollbar {
   display: none !important;
   visibility: hidden;
 }
