--- a/style.css
+++ b/style.css
@@ -677,7 +677,17 @@ main.main > article.content .head > span.stats span.dot {
   display: none;
 }
 
-main.main > article.content .fonts {
+
+main.main > article.content > #content.content {
+  /* border: 1px solid #000000; */
+  display: flex;
+  flex-flow: column;
+  color: #1f2937;
+  gap: 20px;
+  font-size: 1rem;
+}
+
+main.main > article.content > #content.content .fonts {
   padding: 10px 0;
   display: flex;
   align-items: center;
@@ -690,7 +700,7 @@ main.main > article.content .fonts {
   background-color: var(--background);
 }
 
-main.main > article.content .fonts > .options {
+main.main > article.content > #content.content .fonts > .options {
   display: flex;
   align-items: center;
   justify-content: start;
@@ -698,7 +708,7 @@ main.main > article.content .fonts > .options {
   gap: 20px;
 }
 
-main.main > article.content .fonts .options * {
+main.main > article.content > #content.content .fonts .options * {
   transition: all 300ms ease-in-out;
   -webkit-transition: all 300ms ease-in-out;
   -moz-transition: all 300ms ease-in-out;
@@ -707,15 +717,16 @@ main.main > article.content .fonts .options * {
 }
 
 
-main.main > article.content .fonts.sticky {
+main.main > article.content > #content.content .fonts.sticky {
   border-bottom: 1px solid #1f293725;
 }
 
-main.main > article.content .fonts .options > span.font {
+main.main > article.content > #content.content .fonts .options > span.font {
   display: inline-block;
   padding: 4px 15px;
   cursor: pointer;
   font-size: 0.95rem;
+  color: #6b7280;
   border: 1px solid #6b72805d;
   border-radius: 50px;
   -webkit-border-radius: 50px;
@@ -724,33 +735,23 @@ main.main > article.content .fonts .options > span.font {
   -o-border-radius: 50px;
 }
 
-main.main > article.content .fonts .options > span.font.mono {
+main.main > article.content > #content.content .fonts .options > span.font.mono {
   font-family: var(--font-mono);
   font-size: 0.9rem;
 }
 
-main.main > article.content .fonts .options > span.font.serif {
+main.main > article.content > #content.content .fonts .options > span.font.serif {
   font-family: 'Times New Roman', Times, serif;
 }
 
-main.main > article.content .fonts .options > span.font.active {
+main.main > article.content > #content.content .fonts .options > span.font.active {
   border-color: #21d02abe;
   background-color: #f3fff4;
 }
 
-main.main > article.content .fonts .options > span.font:hover {
+main.main > article.content > #content.content .fonts .options > span.font:hover {
   border-color: #21d02abe;
   background-color: #f3fff4;
-}
-
-
-main.main > article.content > #content.content {
-  /* border: 1px solid #000000; */
-  display: flex;
-  flex-flow: column;
-  color: #1f2937;
-  gap: 20px;
-  font-size: 1rem;
 }
 
 main.main > article.content > #content.content div.src-image{
@@ -893,25 +894,21 @@ main.main > article.content .next-article > a > span.title {
   font-size: 0.8rem;
 }
 
-/* Responses */
-
-main.main > article.content section.responses {
-  /* border: 1px solid #000000; */
+/* Opinion */
+section.opinion {
+  /* border-top: 1px solid #6b72805e; */
+  margin: 20px 0 0 0;
+  background-color: var(--background);
+  padding: 10px 0;
   display: flex;
   flex-flow: column;
   gap: 0;
+  z-index: 2;
+  position: sticky;
+  top: 70px;
 }
 
-section.responses > .head {
-  /* border-top: 1px solid #6b72805e; */
-  margin: 20px 0 0 0;
-  padding: 10px 0;
-  display: flex;
-  flex-flow: column-reverse;
-  gap: 0;
-}
-
-section.responses > .head > form.opinion {
+section.opinion > form.opinion {
   /* border-bottom: 1px solid #6b72805d; */
   /* border: 1px solid #000000; */
   padding: 10px 0 10px 0;
@@ -925,7 +922,7 @@ section.responses > .head > form.opinion {
   position: relative;
 }
 
-section.responses > .head > form.opinion .image {
+section.opinion > form.opinion .image {
   /* border: thin solid #4b5563bd; */
   padding: 0;
   display: flex;
@@ -942,7 +939,7 @@ section.responses > .head > form.opinion .image {
   -o-border-radius: 50px;
 }
 
-section.responses > .head > form.opinion .image img {
+section.opinion > form.opinion .image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -953,7 +950,7 @@ section.responses > .head > form.opinion .image img {
   -o-border-radius: 50px;
 }
 
-section.responses > .head > form.opinion > textarea {
+section.opinion > form.opinion > textarea {
   /* border: 1px solid #6b72805e; */
   border: none;
   padding: 8px !important;
@@ -975,16 +972,16 @@ section.responses > .head > form.opinion > textarea {
   scrollbar-width: none;
 }
 
-section.responses > .head > form.opinion > textarea::-webkit-scrollbar {
+section.opinion > form.opinion > textarea::-webkit-scrollbar {
   display: none !important;
   visibility: hidden;
 }
 
-section.responses > .head > form.opinion > textarea:focus {
+section.opinion > form.opinion > textarea:focus {
   border: 1px solid #18a5669a;
 }
 
-section.responses > .head > form.opinion > button {
+section.opinion > form.opinion > button {
   border: none;
   cursor: pointer;
   color: #ffffff;
@@ -1008,22 +1005,23 @@ section.responses > .head > form.opinion > button {
   -o-border-radius: 50px;
 }
 
-section.responses > .head > form.opinion  > button svg {
+section.opinion > form.opinion  > button svg {
   color: #18A565;
   width: 24px;
   height: 26px;
 }
 
-section.responses > .head > .title {
+section.opinion > .title {
   /* border: 1px solid #6b72805e; */
   padding: 0 10px 20px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 0;
+  color: #6b7280;
 }
 
-section.responses > .head > .title > h2 {
+section.opinion > .title > h2 {
   margin: 0;
   font-weight: 600;
   line-height: 1.5;
@@ -1031,6 +1029,16 @@ section.responses > .head > .title > h2 {
   color: #53595f;
 }
 
+
+
+/* Responses */
+
+main.main > article.content section.responses {
+  /* border: 1px solid #000000; */
+  display: flex;
+  flex-flow: column;
+  gap: 0;
+}
 
 section.responses > .response {
   border-top: 1px solid #6b728038;
