--- a/style.css
+++ b/style.css
@@ -1022,7 +1022,7 @@ section.opinion > form.opinion  > button svg {
 section.opinion > .title {
   /* border: 1px solid #6b72805e; */
   padding: 0 10px 20px 0;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: space-between;
   gap: 0;
@@ -1263,107 +1263,6 @@ main.main > section.side .on-this > .table-of-content ul > li > a:hover {
   /* font-weight: 500; */
   color: #1f2937;
 }
-
-main.main > section.side .related {
-  /* border: thin solid #4b5563bd; */
-  background-color: var(--background);
-  padding: 20px 15px 30px 15px;
-  margin: 0;
-  display: flex;
-  flex-flow: column;
-  gap: 10px;
-}
-
-main.main > section.side .related p.title {
-  margin: 0;
-  color: #53595f;
-  font-weight: 600;
-  font-size: 1.15rem;
-  /* text-transform: uppercase; */
-}
-
-main.main > section.side .related .related-stories{
-  /* border: thin solid #4b5563bd; */
-  display: flex;
-  flex-flow: column;
-  gap: 20px;
-}
-
-main.main > section.side .related .related-stories .story {
-  /* border: thin solid #4b5563bd; */
-  display: flex;
-  flex-flow: column;
-  gap: 5px;
-}
-
-main.main > section.side .related .related-stories .story > h4.title {
-  margin: 0;
-  font-weight: 500;
-  font-size: 0.9rem;
-  color: #53595f;
-}
-
-main.main > section.side .related .related-stories .story > h4.title a {
-  color: inherit;
-  line-height: 1.4;
-}
-
-main.main>section.side .related .related-stories .story>h4.title:hover {
-  color: #1f2937;
-}
-
-main.main > section.side .related .related-stories .story > .info {
-  /* border: thin solid #4b5563bd; */
-  display: flex;
-  justify-content: space-between;
-  gap: 0px;
-  color: #6b7280;
-}
-
-main.main > section.side .related .related-stories .story > .info > .author {
-  /* border: thin solid #4b5563bd; */
-  padding: 0;
-  display: flex;
-  align-items: center;
-  /* justify-content: center; */
-  gap: 5px;
-}
-
-main.main > section.side .related .related-stories .story > .info > .author > .name {
-  /* border: thin solid #4b5563bd; */
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  font-family: var(--font-one);
-  line-height: 1.4;
-  font-size: 0.9rem;
-  font-weight: 400;
-  gap: 0;
-}
-
-main.main > section.side .related .related-stories .story > .info > .author > .name a {
-  font-weight: 500;
-  color: #6b7280;
-}
-
-main.main > section.side .related .related-stories .story > .info > .author > .name a:hover {
-  /* color: #08b86f; */
-  color: transparent;
-  background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
-  background-clip: text;
-  -webkit-background-clip: text;
-}
-
-main.main > section.side .related .related-stories .story > .info > span.stats {
-  font-weight: 400;
-  color: #6b7280;
-  line-height: 1.4;
-  font-size: 0.9rem;
-  font-family: var(--font-mono);
-}
-
-
 
 
 
