--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ Author URL: https://femar.co.ke
 
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Sen:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Sen:wght@400..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
@@ -26,6 +26,7 @@ Author URL: https://femar.co.ke
 */
 :root {
   --font-main: "Inter", sans-serif;
+  --font-alt: "Sen", sans-serif;
   --font-mono: 'Jetbrains Mono';
   --background: #ffffff;
   --vh-height: 100dvh;
@@ -41,6 +42,10 @@ Author URL: https://femar.co.ke
     #ffffffe0,
     #fffffff6,
     #ffffff
+  );
+  --fade-picture-gradient: linear-gradient(180deg,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.8)
   );
 }
 
@@ -1043,7 +1048,6 @@ section.opinion > .title > h2 {
 }
 
 
-
 /* Responses */
 
 main.main > article.content section.responses {
@@ -1266,6 +1270,88 @@ main.main > section.side .on-this > .table-of-content ul > li > a:hover {
 }
 
 
+
+/* Home */
+
+section.trending-stories {
+  margin: 20px 0;
+  display: flex;
+  flex-flow: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+section.trending-stories > a.trending-story {
+  text-decoration: none;
+  height: 200px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
+  width: calc(33% - 20px);
+  /* width: 300px; */
+  position: relative;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: flex-end;
+  overflow: hidden;
+  border-radius: var(--radius);
+  background-position: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+section.trending-stories > a.trending-story > .info {
+  /* border: thin solid #00ff00; */
+  width: 100%;
+  /* overflow: hidden; */
+  background: var(--fade-picture-gradient);
+  z-index: 1;
+  display: flex;
+  flex-flow: column;
+  padding: 30px 15px 10px;
+}
+
+section.trending-stories > a.trending-story > .info > span.topic {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: max-content;
+  height: 23px;
+  color: #ffffff;
+  background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
+  font-size: .9rem;
+  padding: 0 10px;
+  margin: 0 0 8px;
+  font-weight: 500;
+  font-family: var(--font-alt);
+  border-radius: 20px;
+}
+
+section.trending-stories > a.trending-story > .info > h2.trending-title {
+  font-size: 1.2rem;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  font-family: var(--font-alt) !important;
+  color: #ffffff;
+  font-weight: 500;
+  line-height: 1.4;
+  margin: 0 0 10px;
+}
+
+section.trending-stories > a.trending-story > .info > .meta {
+  display: flex;
+  color: #f5f5f5;
+  align-items: center;
+  font-family: var(--font-mono);
+  gap: 5px;
+  font-size: 0.8rem;
+}
 
 
 
