--- a/style.css
+++ b/style.css
@@ -1353,6 +1353,101 @@ section.trending-stories > a.trending-story > .info > .meta {
   font-size: 0.8rem;
 }
 
+/* Home */
+main.home {
+  /* border: 1px solid red; */
+  display: flex;
+  padding: 20px 0 0 0;
+  flex-flow: column;
+  gap: 0;
+  justify-content: space-between;
+}
+
+main.home > section.popular {
+  /* border: thin solid #4b5563bd; */
+  display: flex;
+  gap: 20px;
+}
+
+main.home > section.popular > div.stories {
+  /* border: 1px solid #000000; */
+  /* padding: 30px 20px 30px 0; */
+  width: 63%;
+  display: flex;
+  flex-flow: column;
+  gap: 10px;
+}
+
+main.home > section.popular > div.stories > a.trending-story {
+  text-decoration: none;
+  height: 200px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
+  width: 60%;
+  /* width: 300px; */
+  position: relative;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: flex-end;
+  overflow: hidden;
+  border-radius: var(--radius);
+  background-position: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+main.home > section.popular > div.stories > a.trending-story > .info {
+  /* border: thin solid #00ff00; */
+  width: 100%;
+  /* overflow: hidden; */
+  background: var(--fade-picture-gradient);
+  z-index: 1;
+  display: flex;
+  flex-flow: column;
+  padding: 30px 15px 10px;
+}
+
+main.home > section.popular > div.stories > a.trending-story > .info > span.topic {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: max-content;
+  height: 23px;
+  color: #ffffff;
+  background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
+  font-size: .9rem;
+  padding: 0 10px;
+  margin: 0 0 8px;
+  font-weight: 500;
+  font-family: var(--font-alt);
+  border-radius: 20px;
+}
+
+main.home > section.popular > div.stories > a.trending-story > .info > h2.trending-title {
+  font-size: 1.2rem;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  font-family: var(--font-alt) !important;
+  color: #ffffff;
+  font-weight: 500;
+  line-height: 1.4;
+  margin: 0 0 10px;
+}
+
+main.home > section.popular > div.stories > a.trending-story > .info > .meta {
+  display: flex;
+  color: #f5f5f5;
+  align-items: center;
+  font-family: var(--font-mono);
+  gap: 5px;
+  font-size: 0.8rem;
+}
+
 
 
 
