--- a/style.css
+++ b/style.css
@@ -1270,89 +1270,6 @@ main.main > section.side .on-this > .table-of-content ul > li > a:hover {
 }
 
 
-
-/* Home */
-
-section.trending-stories {
-  margin: 20px 0;
-  display: flex;
-  flex-flow: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: space-between;
-  gap: 20px;
-}
-
-section.trending-stories > a.trending-story {
-  text-decoration: none;
-  height: 200px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
-  width: calc(33% - 20px);
-  /* width: 300px; */
-  position: relative;
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  justify-content: flex-end;
-  overflow: hidden;
-  border-radius: var(--radius);
-  background-position: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
-}
-
-section.trending-stories > a.trending-story > .info {
-  /* border: thin solid #00ff00; */
-  width: 100%;
-  /* overflow: hidden; */
-  background: var(--fade-picture-gradient);
-  z-index: 1;
-  display: flex;
-  flex-flow: column;
-  padding: 30px 15px 10px;
-}
-
-section.trending-stories > a.trending-story > .info > span.topic {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  width: max-content;
-  height: 23px;
-  color: #ffffff;
-  background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
-  font-size: .9rem;
-  padding: 0 10px;
-  margin: 0 0 8px;
-  font-weight: 500;
-  font-family: var(--font-alt);
-  border-radius: 20px;
-}
-
-section.trending-stories > a.trending-story > .info > h2.trending-title {
-  font-size: 1.2rem;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  font-family: var(--font-alt) !important;
-  color: #ffffff;
-  font-weight: 500;
-  line-height: 1.4;
-  margin: 0 0 10px;
-}
-
-section.trending-stories > a.trending-story > .info > .meta {
-  display: flex;
-  color: #f5f5f5;
-  align-items: center;
-  font-family: var(--font-mono);
-  gap: 5px;
-  font-size: 0.8rem;
-}
-
 /* Home */
 main.home {
   /* border: 1px solid red; */
@@ -1366,12 +1283,13 @@ main.home {
 main.home > section.popular {
   /* border: thin solid #4b5563bd; */
   display: flex;
+  flex-flow: column;
   gap: 20px;
 }
 
 main.home > section.popular > div.stories {
   /* border: 1px solid #000000; */
-  /* padding: 30px 20px 30px 0; */
+  padding: 0;
   width: 63%;
   display: flex;
   flex-flow: column;
@@ -1379,11 +1297,121 @@ main.home > section.popular > div.stories {
 }
 
 main.home > section.popular > div.stories > a.trending-story {
+  border: thin solid #6b728032;
   text-decoration: none;
-  height: 200px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
-  width: 60%;
-  /* width: 300px; */
+  height: max-content;
+  padding: 5px 0 0 0;
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, .1); */
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: flex-end;
+  overflow: hidden;
+  /* background-image: linear-gradient(78deg, rgb(31, 6, 71) -50%, rgb(48, 0, 130) 28.67%, rgb(143, 0, 153) 57.79%, rgba(238, 0, 176, 0.85) 76.05%, rgb(247, 95, 98) 88.54%, rgb(255, 190, 20)); */
+  /* background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
+  background-color: #08b86f;
+  background: linear-gradient(-45deg, #23a6d5, #21D029, #18A565, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 5s ease infinite;
+  -webkit-animation: gradient 5s ease infinite; */
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+main.home > section.popular > div.stories > a.trending-story > span.no {
+  /* border: thin solid #00ff00; */
+  position: absolute;
+  right: 10px;
+  /* z-index: 3; */
+  top: 10px;
+  height: 38px;
+  width: 38px;
+  font-weight: 700;
+  font-size: 1.2rem;
+  font-family: var(--font-mono);
+  color: #53595f;
+  /* color: #ffffff; */
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  /* background-image: linear-gradient(78deg, rgb(31, 6, 71) -50%, rgb(48, 0, 130) 28.67%, rgb(143, 0, 153) 57.79%, rgba(238, 0, 176, 0.85) 76.05%, rgb(247, 95, 98) 88.54%, rgb(255, 190, 20)); */
+  /* background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%); */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 50px;
+}
+
+
+main.home > section.popular > div.stories > a.trending-story > .info {
+  /* border: thin solid #00ff00; */
+  width: 100%;
+  /* overflow: hidden; */
+  /* background: var(--fade-picture-gradient); */
+  z-index: 1;
+  display: flex;
+  flex-flow: column;
+  padding: 15px 15px 15px;
+}
+
+main.home > section.popular > div.stories > a.trending-story > .info > span.topic {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: max-content;
+  height: max-content;
+  color: #808080;
+  background-color: #39383816;
+  /* color: #ffffff; */
+  /* background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%); */
+  font-size: .9rem;
+  padding: 4px 15px;
+  margin: 0 0 8px;
+  font-weight: 400;
+  font-family: var(--font-main);
+  border-radius: 20px;
+}
+
+main.home > section.popular > div.stories > a.trending-story > .info > h2.trending-title {
+  font-size: 1.2rem;
+  /* text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); */
+  font-family: var(--font-alt) !important;
+  /* color: #ffffff; */
+  color: #53595f;
+  font-weight: 500;
+  line-height: 1.4;
+  margin: 0 0 10px;
+}
+
+main.home > section.popular > div.stories > a.trending-story > .info > .meta {
+  display: flex;
+  /* color: #f5f5f5; */
+  color: #6b7280;
+  align-items: center;
+  font-family: var(--font-mono);
+  gap: 5px;
+  font-size: 0.8rem;
+}
+
+main.home > section.popular > div.stories > .trending {
+  margin: 20px 0;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+main.home > section.popular > div.stories > .trending > a.trending-story {
+  text-decoration: none;
+  height: 180px;
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, .1); */
+  /* width: calc(33% - 20px); */
+  width: 100%;
   position: relative;
   display: flex;
   flex-flow: column;
@@ -1401,7 +1429,29 @@ main.home > section.popular > div.stories > a.trending-story {
   -o-border-radius: 10px;
 }
 
-main.home > section.popular > div.stories > a.trending-story > .info {
+main.home > section.popular > div.stories > .trending > a.trending-story > span.no {
+  /* border: thin solid #00ff00; */
+  position: absolute;
+  right: 10px;
+  /* z-index: 3; */
+  top: 10px;
+  height: 38px;
+  width: 38px;
+  font-weight: 700;
+  font-size: 1.2rem;
+  font-family: var(--font-mono);
+  color: #ffffff;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  /* background-image: linear-gradient(78deg, rgb(31, 6, 71) -50%, rgb(48, 0, 130) 28.67%, rgb(143, 0, 153) 57.79%, rgba(238, 0, 176, 0.85) 76.05%, rgb(247, 95, 98) 88.54%, rgb(255, 190, 20)); */
+  /* background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%); */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 50px;
+}
+
+main.home > section.popular > div.stories > .trending > a.trending-story > .info {
   /* border: thin solid #00ff00; */
   width: 100%;
   /* overflow: hidden; */
@@ -1412,7 +1462,7 @@ main.home > section.popular > div.stories > a.trending-story > .info {
   padding: 30px 15px 10px;
 }
 
-main.home > section.popular > div.stories > a.trending-story > .info > span.topic {
+main.home > section.popular > div.stories > .trending > a.trending-story > .info > span.topic {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1429,7 +1479,7 @@ main.home > section.popular > div.stories > a.trending-story > .info > span.topi
   border-radius: 20px;
 }
 
-main.home > section.popular > div.stories > a.trending-story > .info > h2.trending-title {
+main.home > section.popular > div.stories > .trending > a.trending-story > .info > h2.trending-title {
   font-size: 1.2rem;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   font-family: var(--font-alt) !important;
@@ -1439,7 +1489,7 @@ main.home > section.popular > div.stories > a.trending-story > .info > h2.trendi
   margin: 0 0 10px;
 }
 
-main.home > section.popular > div.stories > a.trending-story > .info > .meta {
+main.home > section.popular > div.stories > .trending > a.trending-story > .info > .meta {
   display: flex;
   color: #f5f5f5;
   align-items: center;
@@ -1447,6 +1497,7 @@ main.home > section.popular > div.stories > a.trending-story > .info > .meta {
   gap: 5px;
   font-size: 0.8rem;
 }
+
 
 
 
