--- a/style.css
+++ b/style.css
@@ -1292,24 +1292,25 @@ main.home > section.popular {
   /* border: thin solid #4b5563bd; */
   display: flex;
   flex-flow: row;
+  justify-content: space-between;
   gap: 20px;
 }
 
 main.home > section.popular > div.stories {
   /* border: 1px solid #000000; */
   padding: 0;
-  width: 63%;
-  min-width: 63%;
+  width: 60%;
+  min-width: 60%;
   display: flex;
   flex-flow: column;
-  gap: 10px;
+  gap: 0;
 }
 
 main.home > section.popular > div.stories > a.trending-story {
-  border: thin solid #6b728032;
+  border: thin sol/id #6b728032;
   text-decoration: none;
   height: max-content;
-  padding: 5px 0 0 0;
+  padding: 0;
   /* box-shadow: 0 2px 4px rgba(0, 0, 0, .1); */
   width: 100%;
   position: relative;
@@ -1325,11 +1326,6 @@ main.home > section.popular > div.stories > a.trending-story {
   background-size: 400% 400%;
   animation: gradient 5s ease infinite;
   -webkit-animation: gradient 5s ease infinite; */
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
 }
 
 main.home > section.popular > div.stories > a.trending-story > span.no {
@@ -1367,7 +1363,8 @@ main.home > section.popular > div.stories > a.trending-story > .info {
   z-index: 1;
   display: flex;
   flex-flow: column;
-  padding: 15px 15px 15px;
+  /* padding: 15px 15px 15px; */
+  padding: 15px 0;
 }
 
 main.home > section.popular > div.stories > a.trending-story > .info > span.topic {
@@ -1394,10 +1391,10 @@ main.home > section.popular > div.stories > a.trending-story > .info > span.topi
 main.home > section.popular > div.stories > a.trending-story > .info > h2.trending-title {
   font-size: 1.2rem;
   /* text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); */
-  font-family: var(--font-alt) !important;
+  font-family: var(--font-main) !important;
   /* color: #ffffff; */
   color: #53595f;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.4;
   margin: 0 0 10px;
 }
@@ -1413,7 +1410,7 @@ main.home > section.popular > div.stories > a.trending-story > .info > .meta {
 }
 
 main.home > section.popular > div.stories > .trending {
-  margin: 20px 0;
+  margin: 10px 0;
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -1475,7 +1472,7 @@ main.home > section.popular > div.stories > .trending > a.trending-story > .info
   z-index: 1;
   display: flex;
   flex-flow: column;
-  padding: 10px 0 0 0;
+  padding: 15px 0 0 0;
   /* padding: 30px 15px 10px; */
 }
 
@@ -1501,10 +1498,11 @@ main.home > section.popular > div.stories > .trending > a.trending-story > .info
 main.home > section.popular > div.stories > .trending > a.trending-story > .info > h2.trending-title {
   font-size: 1.2rem;
   /* text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); */
-  font-family: var(--font-alt) !important;
+  font-family: var(--font-main) !important;
   /* color: #ffffff; */
   color: #53595f;
-  font-weight: 600;
+  font-size: 1.1rem;
+  font-weight: 500;
   line-height: 1.4;
   margin: 0 0 5px;
 }
@@ -1532,7 +1530,7 @@ main.home > section.popular > div.side {
 main.home > section.popular > div.side > .donate-card {
   /* border: 1px solid #ff0000; */
   background-color: #39383816;
-  padding: 5px 10px;
+  padding: 8px 15px;
   width: 100%;
   display: flex;
   flex-flow: column;
@@ -1548,6 +1546,7 @@ main.home > section.popular > div.side > .donate-card h2 {
   margin: 0;
   color: #1f2937;
   line-height: 1.4;
+  font-weight: 500;
 }
 
 main.home > section.popular > div.side > .donate-card p {
