--- a/style.css
+++ b/style.css
@@ -1641,7 +1641,6 @@ main.home > section.popular > div.side > ul.topics > li.topic a.link:hover {
 
 
 main.home > section.feeds {
-  border: thin solid #4b5563bd;
   margin: 15px 0;
   display: grid;
   grid-template-columns: 5fr 3fr;
@@ -1650,14 +1649,63 @@ main.home > section.feeds {
 }
 
 main.home > section.feeds > div.stories.new {
-  border: 1px solid #000000;
+  /* border: 1px solid #000000; */
   padding: 0;
   width: 100%;
-  min-width: 60%;
   display: flex;
   flex-flow: column;
   gap: 0;
 }
+
+main.home > section.feeds > div.stories.new > .story {
+  /* border: 1px solid #000000; */
+  border-top: thin solid #6b728032;
+  padding: 15px 0;
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  gap: 5px;
+}
+
+main.home > section.feeds > div.stories.new > .story .read-time {
+  /* border: 1px solid #000000; */
+  color: #6b7280;
+  font-size: 0.9rem;
+  font-family: var(--font-mono);
+}
+
+main.home > section.feeds > div.stories.new > .story h3.title {
+  /* border: 1px solid #000000; */
+  color: #53595f;
+  margin: 0;
+  padding: 0;
+  font-weight: 500;
+  line-height: 1.5;
+}
+
+main.home > section.feeds > div.stories.new > .story h3.title > a {
+  text-decoration: none;
+  color: inherit;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta {
+  display: flex;
+  /* color: #f5f5f5; */
+  color: #6b7280;
+  align-items: center;
+  font-family: var(--font-mono);
+  gap: 5px;
+  font-size: 0.9rem;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta a {
+  text-decoration: none;
+  color: transparent;
+  background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
 
 
 
