--- a/style.css
+++ b/style.css
@@ -1690,12 +1690,17 @@ main.home > section.feeds > div.stories.new > .story h3.title > a {
 
 main.home > section.feeds > div.stories.new > .story > .meta {
   display: flex;
+  position: relative;
   /* color: #f5f5f5; */
   color: #6b7280;
   align-items: center;
   font-family: var(--font-mono);
   gap: 5px;
   font-size: 0.9rem;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta > .author {
+  position: relative;
 }
 
 main.home > section.feeds > div.stories.new > .story > .meta a {
@@ -1705,6 +1710,177 @@ main.home > section.feeds > div.stories.new > .story > .meta a {
   background-clip: text;
   -webkit-background-clip: text;
 }
+
+main.home > section.feeds > div.stories.new > .story > .meta  .profile {
+  /* border: 1px solid #6b728048; */
+  border: 1px solid #83858442;
+  box-shadow: 0 12px 48px #6d758d33;
+  padding: 0px 10px 10px;
+  z-index: 2;
+  position: absolute;
+  top: 25px;
+  left: 0;
+  background-color: var(--background);
+  display: flex;
+  flex-flow: column;
+  width: 300px;
+  border-radius: 12px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  -ms-border-radius: 12px;
+  -o-border-radius: 12px;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta  .profile > span.pointer {
+  border: 1px solid #83858442;
+  border-bottom: none;
+  border-right: none;
+  position: absolute;
+  top: -5px;
+  left: 50px;
+  background-color: var(--background);
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  rotate: 45deg;
+  border-radius: 1px;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  -ms-border-radius: 1px;
+  -o-border-radius: 1px;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta  .profile > .head {
+  /* border: 1px solid #000000; */
+  background-color: var(--background);
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+  gap: 10px;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta  .profile > .head > .image {
+  /* border: 1px solid #000000; */
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta  .profile > .head > .image img {
+  /* border: 1px solid #000000; */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta .info {
+  /* border: 1px solid #000000; */
+  display: flex;
+  flex-flow: column;
+  /* align-items: center; */
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta .info p.name {
+  /* border: 1px solid #000000; */
+  margin: 0;
+  color: #53595f;
+  font-weight: 500;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta .info p.name svg {
+  /* border: 1px solid #000000; */
+  margin: -2px 0 0;
+  color: #08b86f;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta .info a.followers {
+  /* border: 1px solid #000000; */
+  text-decoration: none;
+  margin: 0;
+  color: #6b7280;
+  background: unset;
+  font-family: var(--font-main);
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  gap: 5px;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta .info a.followers > span.no {
+  font-family: var(--font-mono);
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta .data {
+  /* border: 1px solid #000000; */
+  display: flex;
+  flex-flow: column;
+  /* align-items: center; */
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta .data > p.name {
+  /* border: 1px solid #000000; */
+  margin: 0;
+  color: #53595f;
+  font-weight: 500;
+  font-family: var(--font-main);
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta .data > span.bio {
+  /* border: 1px solid #000000; */
+  margin: 0;
+  color: #6b7280;
+  font-family: var(--font-main);
+  font-size: 0.9rem;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta span.action {
+  border: 1px solid #6b72808e;
+  margin: 10px 0 5px;
+  padding: 5px 15px;
+  /*color: #53595f;
+  */font-weight: 500;
+  font-family: var(--font-main);
+  font-size: 0.9rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta span.action.following {
+  border: none;
+  text-decoration: none;
+  color: #ffffff;
+  background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
+}
+
+
 
 
 
