--- a/style.css
+++ b/style.css
@@ -1432,11 +1432,6 @@ main.home > section.popular > div.stories > .trending > a.trending-story {
   background-position: 100%;
   background-repeat: no-repeat;
   background-size: cover;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
 }
 
 main.home > section.popular > div.stories > .trending > a.trending-story > span.no {
@@ -1497,9 +1492,7 @@ main.home > section.popular > div.stories > .trending > a.trending-story > .info
 
 main.home > section.popular > div.stories > .trending > a.trending-story > .info > h2.trending-title {
   font-size: 1.2rem;
-  /* text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); */
   font-family: var(--font-main) !important;
-  /* color: #ffffff; */
   color: #53595f;
   font-size: 1.1rem;
   font-weight: 500;
@@ -1508,8 +1501,8 @@ main.home > section.popular > div.stories > .trending > a.trending-story > .info
 }
 
 main.home > section.popular > div.stories > .trending > a.trending-story > .info > .meta {
+  /* border: 1px solid #000000; */
   display: flex;
-  /* color: #f5f5f5; */
   color: #6b7280;
   align-items: center;
   font-family: var(--font-mono);
@@ -1658,8 +1651,7 @@ main.home > section.feeds > div.stories.new {
 }
 
 main.home > section.feeds > div.stories.new > .story {
-  /* border: 1px solid #000000; */
-  border-top: thin solid #6b728032;
+  border-top: thin solid #6b72801a;
   padding: 15px 0;
   width: 100%;
   display: flex;
@@ -1689,6 +1681,8 @@ main.home > section.feeds > div.stories.new > .story h3.title > a {
 }
 
 main.home > section.feeds > div.stories.new > .story > .meta {
+  /* border: 1px solid #000000; */
+  height: 25px;
   display: flex;
   position: relative;
   /* color: #f5f5f5; */
@@ -1700,10 +1694,22 @@ main.home > section.feeds > div.stories.new > .story > .meta {
 }
 
 main.home > section.feeds > div.stories.new > .story > .meta > .author {
-  position: relative;
+  /* border: 1px solid #000000; */
+  height: 100%;
+  display: flex;
+  /* cursor: pointer; */
+  align-items: center;
+  gap: 5px;
 }
 
-main.home > section.feeds > div.stories.new > .story > .meta a {
+main.home > section.feeds > div.stories.new > .story > .meta div.author-name {
+  /* border: 1px solid #000000; */
+  display: flex;
+  align-items: center;
+  /* cursor: pointer; */
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta div.author-name > a {
   text-decoration: none;
   color: transparent;
   background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
@@ -1711,25 +1717,38 @@ main.home > section.feeds > div.stories.new > .story > .meta a {
   -webkit-background-clip: text;
 }
 
+main.home > section.feeds > div.stories.new > .story > .meta a.opinion-link {
+  text-decoration: none;
+  color: transparent;
+  background-image: linear-gradient(78deg, rgb(31, 6, 71) -50%, rgb(48, 0, 130) 28.67%, rgb(143, 0, 153) 57.79%, rgba(238, 0, 176, 0.85) 76.05%, rgb(247, 95, 98) 88.54%, rgb(255, 190, 20));
+  /* background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%); */
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
 main.home > section.feeds > div.stories.new > .story > .meta  .profile {
-  /* border: 1px solid #6b728048; */
   border: 1px solid #83858442;
   box-shadow: 0 12px 48px #6d758d33;
   padding: 0px 10px 10px;
   z-index: 2;
   position: absolute;
-  top: 25px;
+  top: 30px;
   left: 0;
   background-color: var(--background);
-  display: flex;
+  display: none;
   flex-flow: column;
   gap: 0;
   width: 300px;
   border-radius: 12px;
-  -webkit-border-radius: 12px;
-  -moz-border-radius: 12px;
-  -ms-border-radius: 12px;
-  -o-border-radius: 12px;
+  transition: all 100ms ease-out;
+  -webkit-transition: all 100ms ease-out;
+  -moz-transition: all 100ms ease-out;
+  -ms-transition: all 100ms ease-out;
+  -o-transition: all 100ms ease-out;
+}
+
+main.home > section.feeds > div.stories.new > .story > .meta > .author:hover .profile {
+  display: flex;
 }
 
 main.home > section.feeds > div.stories.new > .story > .meta  .profile > span.pointer {
@@ -1749,6 +1768,11 @@ main.home > section.feeds > div.stories.new > .story > .meta  .profile > span.po
   -moz-border-radius: 1px;
   -ms-border-radius: 1px;
   -o-border-radius: 1px;
+}
+
+main.home > section.feeds > div.stories.new > .story.opinion > .meta  .profile > span.pointer{
+  left: unset;
+  right: 50%;
 }
 
 main.home > section.feeds > div.stories.new > .story > .meta  .profile > .head {
@@ -1882,6 +1906,63 @@ main.home > section.feeds > div.stories.new > .story > .meta span.action.follow 
   /* background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%); */
 }
 
+
+main.home > section.feeds > div.stories.new > .story > .content {
+  /*border: 1px solid #6b7280;*/
+  display: flex;
+  flex-flow: column;
+  color: #53595f;
+  line-height: 1.5;
+  gap: 0;
+  margin: 0;
+  padding: 0;
+}
+
+main.home > section.feeds > div.stories.new > .story > .content p {
+  /*border: 1px solid #0b49c7;*/
+  margin: 0 0 5px 0;
+  padding: 0;
+  line-height: 1.5;
+}
+
+main.home > section.feeds > div.stories.new > .story > .content a {
+  /* color: #1da1f2; */
+  cursor: pointer;
+  color: transparent;
+  background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+main.home > section.feeds > div.stories.new > .story > .content a:hover {
+  text-decoration-color: #21D029 !important;
+  text-decoration: underline;
+  -moz-text-decoration-color: #21D029 !important;
+}
+
+main.home > section.feeds > div.stories.new > .story > .content ul,
+main.home > section.feeds > div.stories.new > .story > .content ol {
+  margin: 10px 0 0 20px;
+  line-height: 1.4;
+  color: #1f2937;
+}
+
+main.home > section.feeds > div.stories.new > .story > .content ul a,
+main.home > section.feeds > div.stories.new > .story > .content ol a {
+  color: transparent;
+  background: unset;
+  color: #1f2937;
+  font-weight: 500;
+  text-decoration-color: #4b556321 !important;
+  text-decoration: underline;
+  -moz-text-decoration-color: #4b556321 !important;
+}
+
+main.home > section.feeds > div.stories.new > .story > .content ul a:hover,
+main.home > section.feeds > div.stories.new > .story > .content ol a:hover {
+  text-decoration-color: #4b5563bd !important;
+  -moz-text-decoration-color: #4b5563bd !important;
+}
 
 
 
